# lago-sdk

python/: .openapi-generator-ignore  README.md  pyproject.toml  setup.py
python/.openapi-generator/: FILES
python/docs/: AddOn.md  AddOnBaseInput.md  AddOnCreateInput.md  AddOnCreateInputAddOn.md  AddOnObject.md  AddOnUpdateInput.md  AddOnsApi.md  AddOnsPaginated.md  AnalyticsApi.md  ApiErrorBadRequest.md  ApiErrorForbidden.md  ApiErrorNotAllowed.md  ApiErrorNotFound.md  ApiErrorUnauthorized.md  ApiErrorUnprocessableEntity.md  AppliedCoupon.md  AppliedCouponInput.md  AppliedCouponInputAppliedCoupon.md  AppliedCouponObject.md  AppliedCouponObjectExtended.md  AppliedCouponsPaginated.md  BaseAppliedTax.md  BillableMetric.md  BillableMetricBaseInput.md  BillableMetricCreateInput.md  BillableMetricCreateInputBillableMetric.md  BillableMetricGroup.md  BillableMetricGroupValuesInner.md  BillableMetricGroupValuesInnerOneOf.md  BillableMetricObject.md  BillableMetricUpdateInput.md  BillableMetricsApi.md  BillableMetricsPaginated.md  ChargeObject.md  ChargeObjectProperties.md  ChargeProperties.md  ChargePropertiesGraduatedPercentageRangesInner.md  ChargePropertiesGraduatedRangesInner.md  ChargePropertiesVolumeRangesInner.md  Country.md  (+157 more)
python/generator/: config.yaml
python/lago_api/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
python/test/: test_add_on.py  test_add_on_base_input.py  test_add_on_create_input.py  test_add_on_create_input_add_on.py  test_add_on_object.py  test_add_on_update_input.py  test_add_ons_api.py  test_add_ons_paginated.py  (+189 more)
(+1853 files in other folders)
